# youtube-vj

./: .eleventy.cjs  .eleventy.js  .gitignore  .gitmodules  .taurignore  CHANGELOG.md  LICENSE.md  README.md  README.midi-script.md  biome.json  docker-compose.yml  history.html  index.html  package-lock.json  package.json  projection.html  rollup.config.js  setlist.html  tsconfig.app.json  tsconfig.node.json  vite.config.ts  webpack.config.js
.cursor/rules/: auto_commit_workflow.mdc  auto_run_safety.mdc  commit_message.mdc  documentation_sync.mdc  project.mdc  terminal_command_execution.mdc
.github/workflows/: code-check.yml  commitlint.yml  release-please.yml  sync-main.yml
.husky/: commit-msg  pre-push
_layouts/: minimum.html
assets/css/: controller.css  fader.css  history.css  projection.css
assets/js/: config.js  (+13 more)
chrome-extension/: manifest.json
docs/: MIDI_SCRIPT_EDITOR_IMPLEMENTATION_PLAN.md  chrome-extension.md  keyboard-shortcut.md  terms.md  yt-player-state.md
docs-src/: chrome-extension.md  keyboard-shortcut.md  terms.md  yt-player-state.md
extension/: manifest.json
pages/: controller.html  projection.html  setlist.html
scripts/: generate-midi-template.js  midi-script-template.js  package-chrome-extension.js
src/: App.tsx  config.js  constants.ts  controller.js  history.js  index.css  index.html  library.js  main.tsx  projection.html  projection.js  script-template.js  vj-controller.js  vj-player-data.js  vj-player.js  youtube-title-fetcher.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+226 files in other folders)
